# rules_codex

./: .bazelrc  BUILD.bazel  LICENSE  MODULE.bazel  README.md
codex/: BUILD.bazel  defs.bzl  extensions.bzl
codex/private/: BUILD.bazel  codex.bzl  extensions.bzl  flags.bzl  run.bzl  test.bzl  toolchain.bzl
